--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.8),
+    rgba(179, 208, 251, 0.8)
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
