--- a/src/pages/error/style.css
+++ b/src/pages/error/style.css
@@ -7,7 +7,7 @@
   width: 100%;
 }
 .text-warning {
-  color: rgba(211, 177, 42);
+  color: rgb(42, 90, 211);
 }
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
